# xuk

./: .gitignore  README.md  pyproject.toml
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  src.xuk.options.rst  src.xuk.options.utils.rst  src.xuk.rst  xuk.options.html  xuk.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/_modules/: index.html
docs/_build/_sources/: index.rst.txt
docs/_build/_static/: documentation_options.js
docs/_build/autoapi/: index.html
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.doctree  src.xuk.doctree  src.xuk.options.doctree  src.xuk.options.utils.doctree  tests.doctree  xuk.doctree  xuk.options.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  src.xuk.html  src.xuk.options.html  src.xuk.options.utils.html  tests.html  xuk.html
docs/_modules/: index.html
docs/_sources/: index.rst  modules.rst
docs/autoapi/: index.html
docs/autoapi/xuk/: index.html
docs/src/: conf.py
src/xuk/options/: __init__.py  position_builder.py  strategy.py
tests/test_fixed_incom/: test_ytm.py
xuk/fixed_incom/: __init__.py  ytm.py
xuk/options/: __init__.py  position_builder.py  position_profit.py  pricing.py  strategy.py
xuk/options/utils/: __init__.py  columns.py
xuk/portfolio/: kelly.py
xuk/portfolio_optimization/: kelly.py
(+62 files in other folders)
