[tool.poetry]
name = "xuk"
version = "0.1.2"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"
repository = "https://github.com/yghaderi/xuk"

#packages = [
#    {include="xuk", from="src"},
#    {include="xuk/options", from="src"},
#]

[tool.coverage.run]
source = ["xuk"]
branch = true

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
