[tool.poetry]
name = "xuk"
version = "0.1.5"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"
repository = "https://github.com/yghaderi/xuk"


[tool.coverage.run]
source = ["xuk"]
branch = true

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.3"
pydantic = "^2.4.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
